# rust-practice

./: .gitignore  Starting Rust Project.md
.devcontainer/: devcontainer.json
concepts/modules/: Cargo.toml  Makefile  example.txt
concepts/modules/.github/.workflow/: test.yml
concepts/modules/aluminium-sulfuric-acid/: Cargo.toml
concepts/modules/aluminium-sulfuric-acid/src/: main.rs
concepts/modules/color-string/: Cargo.toml
concepts/modules/color-string/src/: color_string.rs  color_text.rs  lib.rs
concepts/modules/color-string/tests/: test_color_string.rs
concepts/modules/command-runner/: Cargo.toml
concepts/modules/command-runner/src/: main.rs
concepts/modules/compression-easy/: Cargo.toml
concepts/modules/compression-easy/src/: main.rs
concepts/modules/custom-maths/: Cargo.toml
concepts/modules/custom-maths/src/: lib.rs
concepts/modules/file-system-crawler/: Cargo.toml
concepts/modules/file-system-crawler/src/: main.rs
concepts/modules/file_reader/src/: color_text.rs  lib.rs  text_reader.rs
concepts/modules/hethanol-oxygen-reaction/: Cargo.toml
concepts/modules/hethanol-oxygen-reaction/src/: main.rs
concepts/modules/levenshtein-distance/: Cargo.toml
concepts/modules/levenshtein-distance/src/: main.rs
concepts/modules/log-parser/: Cargo.toml
concepts/modules/log-parser/src/: lib.rs  main.rs  parser.rs
concepts/modules/momentum-preserve/: Cargo.toml
concepts/modules/momentum-preserve/src/: main.rs
concepts/modules/parabola-volume/: Cargo.toml
concepts/modules/parabola-volume/src/: main.rs
concepts/modules/partial-pressure/: Cargo.toml
concepts/modules/partial-pressure/src/: main.rs
concepts/modules/pipe-twist/: Cargo.toml
concepts/modules/pipe-twist/src/: main.rs
concepts/modules/square-integrator/: Cargo.toml
concepts/modules/square-integrator/src/: main.rs
concepts/modules/src/: main.rs
concepts/modules/vector-sum/: Cargo.toml
concepts/modules/vector-sum/src/: main.rs  vector.rs
image_processing/open_cv_reading_camera/: Cargo.toml
image_processing/open_cv_reading_camera/src/: main.rs  mnist_model.rs  model_loader.rs
playing/backend-server-actix/: Cargo.toml  index.html
playing/backend-server-actix/src/: files_scope.rs  main.rs
playing/backend-server-actix/src/endpoint_examples/: mod.rs  scopes_example.rs  simple_endpoints.rs
playing/backend-server-actix/src/states_example/: mod.rs  states_endpoints.rs
playing/backend-server-actix/src/templates_example/: mod.rs  templates_endpoint.rs
playing/backend-server-actix/static/: example.txt
playing/backend-server-actix/templates/: user.html
playing/rest-api-v1/: Cargo.toml
playing/rest-api-v1/src/: api.rs  cache.rs  main.rs  models.rs
playing/scrapping-linked-list/: .gitignore  Cargo.toml
playing/scrapping-linked-list/src/: cache_manager.rs  main.rs  model.rs  scrapper.rs  song_option.rs  string_formatter.rs
(+204 files in other folders)
