[package]
name = "modules"
version = "0.1.0"
edition = "2021"

[dependencies]
file_reader = { path = "./file_reader" }
color-string = {path = "./color-string"}

[workspace]
members = ["file_reader", "color-string", "custom-maths", "square-integrator", "parabola-volume", "partial-pressure", "pipe-twist", "levenshtein-distance", "hethanol-oxygen-reaction", "aluminium-sulfuric-acid"]
