[package]
name = "backend-server-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"

# Logging
env_logger = "0.11.5"
log = "0.4.14"

# Template engine
handlebars = { version = "6.2.0", features = ["dir_source"] }
serde = { version = "1.0.215", features = ["derive"] }