[package]
name = "rest-api-v1"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39.2" , features = ["full"]}
async-std = { version = "1.12.0"}
lazy_static = "1.5.0"
reqwest = { version = "0.12.5", features = ["json"] }
