[package]
name = "scrapping-linked-list"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.5"
scraper = "0.20.0"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.125"
serde = { version = "1.0.208", features = ["derive"] }
chrono = "0.4.38"
crossterm = "0.28.1"